# ros2_gst_video_bridge

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
.github/ISSUE_TEMPLATE/: bug_report.md  platform_validation.md
.github/workflows/: ci.yml
config/: default_params.yaml
config/profiles/: jetson_low_latency_srt.yaml  raspi_low_latency_srt.yaml  x86_monitoring_udp.yaml
docs/: ARCHITECTURE.md  CONTROL_PLANE.md  DEPENDENCIES.md  DOCUMENTATION_PLAN.md  INDEX.md  LAUNCH.md  PLATFORM_MATRIX.md  RELEASE.md  TROUBLESHOOTING.md  VERSIONING.md
include/ros2_gst_video_bridge/: gst_video_bridge_node.hpp
include/ros2_gst_video_bridge/core/: config_loader.hpp  gst_bridge_config.hpp  pipeline_builder.hpp
include/ros2_gst_video_bridge/runtime/: capability_probe.hpp  metrics_publisher.hpp  stream_engine.hpp  topic_introspector.hpp
launch/: gst_video_bridge.launch.py  gst_video_bridge_advanced.launch.py  gst_video_bridge_minimal.launch.py
ros2_gst_video_bridge/: CMakeLists.txt  package.xml
ros2_gst_video_bridge/config/: default_params.yaml
ros2_gst_video_bridge/config/profiles/: jetson_monitoring_udp.yaml  raspi_monitoring_udp.yaml  recording_file_sink.yaml  x86_low_latency_srt.yaml
ros2_gst_video_bridge/include/ros2_gst_video_bridge/: gst_video_bridge_node.hpp
ros2_gst_video_bridge/include/ros2_gst_video_bridge/core/: config_loader.hpp  gst_bridge_config.hpp  pipeline_builder.hpp
ros2_gst_video_bridge/include/ros2_gst_video_bridge/detail/: adaptation.hpp  encoder_selection.hpp  preflight_policy.hpp  string_utils.hpp
ros2_gst_video_bridge/include/ros2_gst_video_bridge/runtime/: capability_probe.hpp  image_format.hpp  metrics_publisher.hpp  stream_engine.hpp  topic_introspector.hpp
ros2_gst_video_bridge/launch/: gst_video_bridge_advanced.launch.py  gst_video_bridge_minimal.launch.py
ros2_gst_video_bridge/scripts/: benchmark_interlatency.py  run_interlatency_benchmark.zsh  run_soak_profile.zsh  run_transport_codec_matrix.zsh
ros2_gst_video_bridge/src/: gst_video_bridge_node.cc  main.cc
ros2_gst_video_bridge/src/core/: config_loader.cc  pipeline_builder.cc
ros2_gst_video_bridge/src/node/: core.cc  fallback.cc  lifecycle.cc  modes.cc  observability.cc  recovery.cc  streaming.cc
ros2_gst_video_bridge/src/runtime/: capability_probe.cc  image_format.cc  metrics_publisher.cc  stream_engine.cc  topic_introspector.cc
ros2_gst_video_bridge/test/: check_launch_args.py  test_config_loader.cc  test_detail_utils.cc  test_image_format.cc  test_metrics_publisher.cc  test_pipeline_builder.cc  test_preflight_policy.cc  test_stream_engine.cc
ros2_gst_video_bridge_msgs/: CMakeLists.txt  package.xml
ros2_gst_video_bridge_msgs/msg/: RuntimeEvent.msg  RuntimeStatus.msg
ros2_gst_video_bridge_msgs/srv/: SetStreamingProfile.srv
scripts/: run_transport_codec_matrix.zsh
src/: gst_video_bridge_node.cc  main.cc
src/core/: config_loader.cc  pipeline_builder.cc
src/node/: lifecycle.cc  modes.cc  observability.cc  recovery.cc
src/runtime/: capability_probe.cc  metrics_publisher.cc  stream_engine.cc  topic_introspector.cc
test/: test_config_loader.cpp  test_pipeline_builder.cpp
