<?xml version="1.0"?>
<package format="3">
  <name>ros2_gst_video_bridge_msgs</name>
  <version>0.1.0</version>
  <description>Typed interfaces for ros2_gst_video_bridge runtime status, events, and control.</description>

  <maintainer email="mouhsine98@gmail.com">Mouhsine Kassimi Farhaoui</maintainer>
  <license>AGPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
